--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
   ],
   "window": {
     "navigationBarTextStyle": "#ffffff",
-    "navigationBarTitleText": "零食商贩",
+    "navigationBarTitleText": "今日推荐",
     "navigationBarBackgroundColor": "#AB956D",
     "backgroundColor": "#eeeeee",
     "enablePullDownRefresh": true
